--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/bonus.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/bonus.html
@@ -10,16 +10,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Dooplo - Gaming HTML Template</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="{% static 'assets/images/favicon.png' %}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'wheelspin/assets/images/favicon.png' %}" type="image/x-icon">
     <!-- bootstrap -->
-    <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'wheelspin/assets/css/bootstrap.min.css' %}">
     <!-- Plugin css -->
-    <link rel="stylesheet" href="{% static 'assets/css/plugin.css' %}">
+    <link rel="stylesheet" href="{% static 'wheelspin/assets/css/plugin.css' %}">
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'wheelspin/assets/css/style.css' %}">
     <!-- responsive -->
-    <link rel="stylesheet" href="{% static 'assets/css/responsive.css' %}">
+    <link rel="stylesheet" href="{% static 'wheelspin/assets/css/responsive.css' %}">
 </head>
 
 <body>
@@ -185,7 +185,7 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
                             <a class="navbar-brand" href="index.html">
-								<img src="{% static 'assets/images/logo.png' %}" alt="">
+								<img src="{% static 'wheelspin/assets/images/logo.png' %}" alt="">
 							</a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_menu" aria-controls="main_menu" aria-expanded="false" aria-label="Toggle navigation">
 								<span class="navbar-toggler-icon"></span>
@@ -250,7 +250,7 @@
 
     <!-- Breadcrumb Area Start -->
     <section class="breadcrumb-area bonus">
-        <img class="bc-img" src="{% static 'assets/images/breadcrumb/bonus.png' %}" alt="">
+        <img class="bc-img" src="{% static 'wheelspin/assets/images/breadcrumb/bonus.png' %}" alt="">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -299,7 +299,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-bonus">
                         <div class="content">
-                            <img src="{% static 'assets/images/bonus/ic1.png' %}" alt="">
+                            <img src="{% static 'wheelspin/assets/images/bonus/ic1.png' %}" alt="">
                             <h4 class="title">
                                 Lucky Bet bonus
                             </h4>
@@ -310,7 +310,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-bonus">
                         <div class="content">
-                            <img src="{% static 'assets/images/bonus/ic2.png' %}" alt="">
+                            <img src="{% static 'wheelspin/assets/images/bonus/ic2.png' %}" alt="">
                             <h4 class="title">
                                 Progressive jackpot
                             </h4>
@@ -321,7 +321,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-bonus">
                         <div class="content">
-                            <img src="{% static 'assets/images/bonus/ic3.png' %}" alt="">
+                            <img src="{% static 'wheelspin/assets/images/bonus/ic3.png' %}" alt="">
                             <h4 class="title">
                                 Affiliate program
                             </h4>
@@ -332,7 +332,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-bonus">
                         <div class="content">
-                            <img src="{% static 'assets/images/bonus/ic4.png' %}" alt="">
+                            <img src="{% static 'wheelspin/assets/images/bonus/ic4.png' %}" alt="">
                             <h4 class="title">
                                 Bitcoin Faucet
                             </h4>
@@ -343,7 +343,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-bonus">
                         <div class="content">
-                            <img src="{% static 'assets/images/bonus/ic5.png' %}" alt="">
+                            <img src="{% static 'wheelspin/assets/images/bonus/ic5.png' %}" alt="">
                             <h4 class="title">
                                 GOLDEN STAR
                             </h4>
@@ -354,7 +354,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-bonus">
                         <div class="content">
-                            <img src="{% static 'assets/images/bonus/ic6.png' %}" alt="">
+                            <img src="{% static 'wheelspin/assets/images/bonus/ic6.png' %}" alt="">
                             <h4 class="title">
                                 Challenger
                             </h4>
@@ -389,7 +389,7 @@
                 <div class="col-lg-4">
                     <div class="single-deposit-bonus">
                         <div class="content">
-                            <img src="{% static 'assets/images/bonus/dbicon.png' %}" alt="">
+                            <img src="{% static 'wheelspin/assets/images/bonus/dbicon.png' %}" alt="">
                             <h4 class="title">
                                 100% bonus up to 1 BTC
                             </h4>
@@ -402,7 +402,7 @@
                 <div class="col-lg-4">
                     <div class="single-deposit-bonus">
                         <div class="content">
-                            <img src="{% static 'assets/images/bonus/dbicon2.png' %}" alt="">
+                            <img src="{% static 'wheelspin/assets/images/bonus/dbicon2.png' %}" alt="">
                             <h4 class="title">
                                 50% bonus up to 2 BTC
                             </h4>
@@ -415,7 +415,7 @@
                 <div class="col-lg-4">
                     <div class="single-deposit-bonus">
                         <div class="content">
-                            <img src="{% static 'assets/images/bonus/dbicon2.png' %}" alt="">
+                            <img src="{% static 'wheelspin/assets/images/bonus/dbicon2.png' %}" alt="">
                             <h4 class="title">
                                 50% bonus up to 2 BTC
                             </h4>
@@ -474,7 +474,7 @@
                                     </div>
                                     <div class="col-lg-3 col-4 d-flex align-self-center">
                                         <div class="icon">
-                                            <img src="{% static 'assets/images/mail-box.png' %}" alt="">
+                                            <img src="{% static 'wheelspin/assets/images/mail-box.png' %}" alt="">
                                         </div>
                                     </div>
                                     <div class="col-lg-6 col-8 d-flex align-self-center">
@@ -707,7 +707,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <div class="modal-body">
                     <div class="logo-area">
-                        <img class="logo" src="{% static 'assets/images/logo.png' %}" alt="">
+                        <img class="logo" src="{% static 'wheelspin/assets/images/logo.png' %}" alt="">
                     </div>
                     <div class="header-area">
                         <h4 class="title">Great to have you back!</h4>
@@ -759,7 +759,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <div class="modal-body">
                     <div class="logo-area">
-                        <img class="logo" src="{% static 'assets/images/logo.png' %}" alt="">
+                        <img class="logo" src="{% static 'wheelspin/assets/images/logo.png' %}" alt="">
                     </div>
                     <div class="header-area">
                         <h4 class="title">Great to have you back!</h4>
@@ -810,19 +810,19 @@
     <!-- SignIn Area End -->
 
     <!-- jquery -->
-    <script src="{% static 'assets/js/jquery.js' %}"></script>
+    <script src="{% static 'wheelspin/assets/js/jquery.js' %}"></script>
     <!-- popper -->
-    <script src="{% static 'assets/js/popper.min.js' %}"></script>
+    <script src="{% static 'wheelspin/assets/js/popper.min.js' %}"></script>
     <!-- bootstrap -->
-    <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'wheelspin/assets/js/bootstrap.min.js' %}"></script>
     <!-- plugin js-->
-    <script src="{% static 'assets/js/plugin.js' %}"></script>
+    <script src="{% static 'wheelspin/assets/js/plugin.js' %}"></script>
 
     <!-- MpusemoverParallax JS-->
-    <script src="{% static 'assets/js/TweenMax.js' %}"></script>
-    <script src="{% static 'assets/js/mousemoveparallax.js' %}"></script>
+    <script src="{% static 'wheelspin/assets/js/TweenMax.js' %}"></script>
+    <script src="{% static 'wheelspin/assets/js/mousemoveparallax.js' %}"></script>
     <!-- main -->
-    <script src="{% static 'assets/js/main.js' %}"></script>
+    <script src="{% static 'wheelspin/assets/js/main.js' %}"></script>
 </body>
 
 </html>
