all links are fixed now

--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/index.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/index.html
@@ -151,7 +151,8 @@
                                                     <li>
                                                         <a href="#">
 																<i class="fas fa-bell"></i>
-																Invest Exchange
+																In
+                                                                vest Exchange
 															</a>
                                                     </li>
                                                     <li>
