--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/lottery.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/lottery.html
@@ -121,7 +121,7 @@
                                                         </ul>
                                                     </li>
                                                 </ul>
-                                                <a href="cart.html" class="link-btn">Cart Page</a>
+                                                <a href="/cart" class="link-btn">Cart Page</a>
                                             </div>
                                         </div>
                                     </li>
@@ -184,7 +184,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
-                            <a class="navbar-brand" href="index.html">
+                            <a class="navbar-brand" href="/">
 								<img src="{% static 'wheelspin/assets/images/logo.png' %}" alt="">
 							</a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_menu" aria-controls="main_menu" aria-expanded="false" aria-label="Toggle navigation">
@@ -198,20 +198,20 @@
 										<div class="mr-hover-effect"></div>
 										</a>
                                         <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="index.html"> <i class="fa fa-angle-double-right"></i>Home 1</a></li>
-                                            <li><a class="dropdown-item" href="index2.html"> <i class="fa fa-angle-double-right"></i> Home 2</a></li>
+                                            <li><a class="dropdown-item" href="/"> <i class="fa fa-angle-double-right"></i>Home 1</a></li>
+                                            <li><a class="dropdown-item" href="/"> <i class="fa fa-angle-double-right"></i> Home 2</a></li>
                                         </ul>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="play.html">Play
+                                        <a class="nav-link" href="/play">Play
 												<div class="mr-hover-effect"></div></a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link active" href="lottery.html">lottery
+                                        <a class="nav-link active" href="/lottery">lottery
 												<div class="mr-hover-effect"></div></a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="tournaments.html">tournaments
+                                        <a class="nav-link" href="/tournaments">tournaments
 												<div class="mr-hover-effect"></div></a>
                                     </li>
                                     <li class="nav-item dropdown">
@@ -220,20 +220,20 @@
 											<div class="mr-hover-effect"></div>
 										</a>
                                         <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="about.html"> <i class="fa fa-angle-double-right"></i>About</a></li>
-                                            <li><a class="dropdown-item" href="affiliate.html"> <i class="fa fa-angle-double-right"></i>Affiliate</a></li>
-                                            <li><a class="dropdown-item" href="awards.html"> <i class="fa fa-angle-double-right"></i>Awards</a></li>
-                                            <li><a class="dropdown-item" href="bonus.html"> <i class="fa fa-angle-double-right"></i>Bonus</a></li>
-                                            <li><a class="dropdown-item" href="cart.html"> <i class="fa fa-angle-double-right"></i>Cart</a></li>
-                                            <li><a class="dropdown-item" href="faq.html"> <i class="fa fa-angle-double-right"></i>Faq</a></li>
-                                            <li><a class="dropdown-item" href="how-it-work.html"> <i class="fa fa-angle-double-right"></i>How It Work</a></li>
-                                            <li><a class="dropdown-item" href="terms-conditions.html"> <i class="fa fa-angle-double-right"></i>Terms & Condition</a></li>
-                                            <li><a class="dropdown-item" href="terms-conditions-details.html"> <i class="fa fa-angle-double-right"></i>Condition Details</a></li>
-                                            <li><a class="dropdown-item" href="404.html"> <i class="fa fa-angle-double-right"></i>404</a></li>
+                                            <li><a class="dropdown-item" href="/about"> <i class="fa fa-angle-double-right"></i>About</a></li>
+                                            <li><a class="dropdown-item" href="/affiliate"> <i class="fa fa-angle-double-right"></i>Affiliate</a></li>
+                                            <li><a class="dropdown-item" href="/awards"> <i class="fa fa-angle-double-right"></i>Awards</a></li>
+                                            <li><a class="dropdown-item" href="/bonus"> <i class="fa fa-angle-double-right"></i>Bonus</a></li>
+                                            <li><a class="dropdown-item" href="/cart"> <i class="fa fa-angle-double-right"></i>Cart</a></li>
+                                            <li><a class="dropdown-item" href="/faq"> <i class="fa fa-angle-double-right"></i>Faq</a></li>
+                                            <li><a class="dropdown-item" href="/how-it-work"> <i class="fa fa-angle-double-right"></i>How It Work</a></li>
+                                            <li><a class="dropdown-item" href="/terms-conditions"> <i class="fa fa-angle-double-right"></i>Terms & Condition</a></li>
+                                            <li><a class="dropdown-item" href="/terms-conditions-details"> <i class="fa fa-angle-double-right"></i>Condition Details</a></li>
+                                            <li><a class="dropdown-item" href="/404"> <i class="fa fa-angle-double-right"></i>404</a></li>
                                         </ul>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="contact.html">Contact
+                                        <a class="nav-link" href="/contact">Contact
 													<div class="mr-hover-effect"></div></a>
                                     </li>
                                 </ul>
@@ -259,7 +259,7 @@
                     </h4>
                     <ul class="breadcrumb-list">
                         <li>
-                            <a href="index.html">
+                            <a href="/">
 									<i class="fas fa-home"></i>
 									Home
 							</a>
@@ -268,7 +268,7 @@
                             <span><i class="fas fa-chevron-right"></i> </span>
                         </li>
                         <li>
-                            <a href="lottery.html">Lottery</a>
+                            <a href="/lottery">Lottery</a>
                         </li>
                     </ul>
                 </div>
