templatized every page

--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/404.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/404.html
@@ -1,36 +1,7 @@
+{% extends 'wheelspin/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="forntEnd-Developer" content="Mamunur Rashid">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dooplo - Gaming HTML Template</title>
-    <!-- favicon -->
-    <link rel="shortcut icon" href="{% static 'wheelspin/assets/images/favicon.png' %}" type="image/x-icon">
-    <!-- bootstrap -->
-    <link rel="stylesheet" href="{% static 'wheelspin/assets/css/bootstrap.min.css' %}">
-    <!-- Plugin css -->
-    <link rel="stylesheet" href="{% static 'wheelspin/assets/css/plugin.css' %}">
-
-    <!-- stylesheet -->
-    <link rel="stylesheet" href="{% static 'wheelspin/assets/css/style.css' %}">
-    <!-- responsive -->
-    <link rel="stylesheet" href="{% static 'wheelspin/assets/css/responsive.css' %}">
-</head>
-
-<body class="home2">
-    <!-- preloader area start -->
-    <div class="preloader" id="preloader">
-        <div class="loader loader-1">
-            <div class="loader-outter"></div>
-            <div class="loader-inner"></div>
-        </div>
-    </div>
-    <!-- preloader area end -->
+{% block title %}Crypto Wheel Spin{% endblock %}
+{% block body %}
 
     <!-- 404 Area Start -->
     <section class="four-zero-four">
@@ -53,16 +24,4 @@
     </section>
     <!-- 404 Area End -->
 
-    <!-- jquery -->
-    <script src="{% static 'wheelspin/assets/js/jquery.js' %}"></script>
-    <!-- popper -->
-    <script src="{% static 'wheelspin/assets/js/popper.min.js' %}"></script>
-    <!-- bootstrap -->
-    <script src="{% static 'wheelspin/assets/js/bootstrap.min.js' %}"></script>
-    <!-- plugin js-->
-    <script src="{% static 'wheelspin/assets/js/plugin.js' %}"></script>
-    <!-- main -->
-    <script src="{% static 'wheelspin/assets/js/main.js' %}"></script>
-</body>
-
-</html>
+{% endblock %}
