--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/header.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/header.html
@@ -19,118 +19,13 @@
                                             <i class="fas fa-envelope"></i> info@Dooplo.com
                                         </p>
                                     </li>
-                                    <li>
-                                        <div class="language-selector">
-                                            <select name="language" class="language">
-												<option value="1">English</option>
-												<option value="2">France</option>
-												<option value="3">Japan</option>
-											</select>
-                                        </div>
-                                    </li>
+                        
                                 </ul>
                             </div>
                             <div class="right-content">
                                 <ul class="right-list">
-                                    <li>
-                                        <div class="cart-icon tm-dropdown">
-                                            <i class="fas fa-cart-arrow-down"></i>
-                                            <span class="cart-count">10</span>
-                                            <div class="tm-dropdown-menu">
-                                                <ul class="list">
-                                                    <li class="list-item">
-                                                        <div class="close">
-                                                            <i class="fas fa-times"></i>
-                                                        </div>
-                                                        <ul class="number-list">
-                                                            <li>24</li>
-                                                            <li>25</li>
-                                                            <li>26</li>
-                                                            <li>27</li>
-                                                            <li>28</li>
-                                                        </ul>
-                                                    </li>
-                                                    <li class="list-item">
-                                                        <div class="close">
-                                                            <i class="fas fa-times"></i>
-                                                        </div>
-                                                        <ul class="number-list">
-                                                            <li>24</li>
-                                                            <li>25</li>
-                                                            <li>26</li>
-                                                            <li>27</li>
-                                                            <li>28</li>
-                                                        </ul>
-                                                    </li>
-                                                    <li class="list-item">
-                                                        <div class="close">
-                                                            <i class="fas fa-times"></i>
-                                                        </div>
-                                                        <ul class="number-list">
-                                                            <li>24</li>
-                                                            <li>25</li>
-                                                            <li>26</li>
-                                                            <li>27</li>
-                                                            <li>28</li>
-                                                        </ul>
-                                                    </li>
-                                                    <li class="list-item">
-                                                        <div class="close">
-                                                            <i class="fas fa-times"></i>
-                                                        </div>
-                                                        <ul class="number-list">
-                                                            <li>24</li>
-                                                            <li>25</li>
-                                                            <li>26</li>
-                                                            <li>27</li>
-                                                            <li>28</li>
-                                                        </ul>
-                                                    </li>
-                                                </ul>
-                                                <a href="/cart" class="link-btn">Cart Page</a>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="notofication tm-dropdown">
-                                            <i class="fas fa-bell"></i>
-                                            <span class="count">11</span>
-                                            <div class="tm-dropdown-menu">
-                                                <ul class="list">
-                                                    <li>
-                                                        <a href="#">
-																	<i class="fas fa-bell"></i>
-																	Invest Exchange
-																</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">
-																	<i class="fas fa-bell"></i>
-																	Invest Exchange
-																</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">
-																	<i class="fas fa-bell"></i>
-																	Invest Exchange
-																</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">
-																	<i class="fas fa-bell"></i>
-																	Invest Exchange
-																</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">
-																	<i class="fas fa-bell"></i>
-																	Invest Exchange
-																</a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </li>
+                                    
+                                    
                                     <li>
                                         <a href="#" class="sign-in" data-toggle="modal" data-target="#login">
 												<i class="fas fa-user"></i> Sign In
@@ -158,29 +53,24 @@
 							</button>
                             <div class="collapse navbar-collapse fixed-height" id="main_menu">
                                 <ul class="navbar-nav ml-auto">
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-											Home
-										<div class="mr-hover-effect"></div>
-										</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="/"> <i class="fa fa-angle-double-right"></i>Home 1</a></li>
-                                            <li><a class="dropdown-item" href="/"> <i class="fa fa-angle-double-right"></i> Home 2</a></li>
-                                        </ul>
-                                    </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/play">Play
+                                        <a class="nav-link" href="/">Home
 												<div class="mr-hover-effect"></div></a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/lottery">lottery
+                                        <a class="nav-link" href="/slots">Slots
 												<div class="mr-hover-effect"></div></a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/tournaments">tournaments
+                                        <a class="nav-link" href="/slotlist">Slotlist
 												<div class="mr-hover-effect"></div></a>
                                     </li>
-                                    <li class="nav-item dropdown">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/about">About
+												<div class="mr-hover-effect"></div></a>
+                                    </li>
+                                    
+                                    <!--<li class="nav-item dropdown">
                                         <a class="nav-link active dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 											Pages
 											<div class="mr-hover-effect"></div>
@@ -197,10 +87,14 @@
                                             <li><a class="dropdown-item" href="/terms-conditions-details"> <i class="fa fa-angle-double-right"></i>Condition Details</a></li>
                                             <li><a class="dropdown-item" href="/404"> <i class="fa fa-angle-double-right"></i>404</a></li>
                                         </ul>
-                                    </li>
+                                    </li>-->
                                     <li class="nav-item">
                                         <a class="nav-link" href="/contact">Contact
 													<div class="mr-hover-effect"></div></a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/faq">FAQ
+												<div class="mr-hover-effect"></div></a>
                                     </li>
                                 </ul>
                                 <a href="#" class="mybtn1" data-toggle="modal" data-target="#signin"> Join us</a>
