--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/header.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/header.html
@@ -66,6 +66,10 @@
 												<div class="mr-hover-effect"></div></a>
                                     </li>
                                     <li class="nav-item">
+                                        <a class="nav-link" href="/game">WheelGame
+												<div class="mr-hover-effect"></div></a>
+                                    </li>
+                                    <li class="nav-item">
                                         <a class="nav-link" href="/about">About
 												<div class="mr-hover-effect"></div></a>
                                     </li>
