--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/slotlist.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/slotlist.html
@@ -75,7 +75,9 @@
                                                                         33528.36
                                                                     </td>
                                                                     <td>
-                                                                        <button style="background-color: #f0ad4e; color: black; padding: 5px 40px; border-radius: 14px; outline: none; border: none;">Join</btutton>
+                                                                        <a href="/games/reqForROOM/5/5">
+                                                                            <button style="background-color: #f0ad4e; color: black; padding: 5px 40px; border-radius: 14px; outline: none; border: none;">Join</btutton>
+                                                                        </a>
                                                                     </td>
                                                                 </tr>
                                                                 <tr>
