--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/wheelgame.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/wheelgame.html
@@ -9,9 +9,9 @@
 {% block body %}
 
     {{ room_name|json_script:"room-name" }}
-    <div>{{joined}}</div>
-    <section class="four-zero-four">
-    <div align="center">
+    
+    <section class="four-zero-four" style="display: flex;justify-content: center;">
+    <div style="margin-top:25vh ">
             
             <table cellpadding="0" cellspacing="0" border="0">
             <tr>
@@ -20,7 +20,7 @@
                         <br />
                         <br />
                        
-                        <img id="spin_button"  alt="Spin" onClick="startSpin();" />
+                        <img src="https://img.icons8.com/cute-clipart/64/000000/start.png" id="spin_button"  alt="Spin" onClick="startSpin();" />
                         <br /><br />
                         &nbsp;&nbsp;
                     </div>
@@ -34,7 +34,18 @@
         </table>
     </div>
     </section>
+    <p>askldhjksahdkjsajdlksahkjdsahjkdhsajkdhskjdhjksahdjk</p>
+    {% for x in userlist %}
+    <p>{{x}}</p>
+    {% endfor %}
+    {{ userlist|json_script:"userlist" }}
+    {{ deg|json_script:"deg" }}
+
 {% block footerlinks %}
+<script>
+    alert("{{winner}} {{deg}}")
+</script>
     <script type="text/javascript" src="{% static 'wheelspin/game/js/main.js' %}"></script>
 {% endblock %}
+
 {% endblock %}
