--- a/CryptoWheelSpin/accounts/templates/registration/login.html
+++ b/CryptoWheelSpin/accounts/templates/registration/login.html
@@ -1,5 +1,60 @@
-<form method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Login">
-</form>
+
+{% extends 'wheelspin/base.html' %}
+{% load static %}
+{% block title %}Crypto Wheel Spin{% endblock %}
+{% block body %}
+
+    <!-- Login Area Start -->
+    <div class="login-modal" id="login" style="margin-top: 100px;">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                
+                <div class="modal-body">
+                    <div class="logo-area">
+                        <img class="logo" src="{% static 'wheelspin/assets/images/logo.png' %}" alt="">
+                    </div>
+                    <div class="header-area">
+                        <h4 class="title">Great to have you back!</h4>
+                        <p class="sub-title">Enter your details below.</p>
+                    </div>
+                    <div class="form-area">
+                        <form method="POST">
+                        {% csrf_token %}
+                            {% for field in form %}
+                            {{ field.errors }}
+                                <div class="form-group" style="text-align:center">
+                                    
+                                    {{ field.label_tag }} <br> {{ field }} <br>
+                                </div>
+                            {% endfor %}
+                            <br>
+                            <div class="form-group">
+                                <div class="box">
+                                    <div class="left">
+                                        <input type="checkbox" class="check-box-field" id="input-save-password" checked>
+                                        <label for="input-save-password">Remember Password</label>
+                                    </div>
+                                    <div class="right">
+                                        <a href="#">
+										Forgot Password?
+									</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="mybtn1">Log In</button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="form-footer">
+                        <p>Not a member?
+                            <a href="/accounts/signup">Create account <i class="fas fa-angle-double-right"></i></a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Login Area End -->
+
+{% endblock %}
