--- a/CryptoWheelSpin/accounts/templates/registration/sign_up.html
+++ b/CryptoWheelSpin/accounts/templates/registration/sign_up.html
@@ -1,5 +1,48 @@
-<form method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Sign up">
-</form>
+{% extends 'wheelspin/base.html' %}
+{% load static %}
+{% block title %}Crypto Wheel Spin{% endblock %}
+{% block body %}
+
+    <!-- SignUp Area Start -->
+    <div class="login-modal" id="signin" style="margin-top: 100px;">
+        <div class="modal-dialog modal-dialog-centered " role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <div class="logo-area">
+                        <img class="logo" src="{% static 'wheelspin/assets/images/logo.png' %}" alt="">
+                    </div>
+                    <div class="header-area">
+                        <h4 class="title">Great to have you back!</h4>
+                        <p class="sub-title">Enter your details below.</p>
+                    </div>
+                    <div class="form-area">
+                        <form action="#" method="POST">
+                        {% csrf_token %}
+                            {% for field in form %}
+                                <div class="form-group" style="text-align:center">
+                                    {{ field.errors }}
+                                    {{ field.label_tag }} <br> {{ field }} <br>
+                                </div>
+                            {% endfor %}
+                            <br>
+                           
+                            <div class="form-group" style="text-align:center">
+                                <div class="check-group">
+                                    <input type="checkbox" class="check-box-field" id="input-terms" checked>
+                                    <label for="input-terms">
+												I agree with <a href="#">terms and Conditions</a> and  <a href="#">privacy policy</a>
+										</label>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="mybtn1">Sign Up</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- SignUp Area End -->
+
+{% endblock %}
